<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Rishi Raj
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="me.itsrishi.exercisecounter.activities.ExerciseCreateActivity">

    <include
        android:id="@+id/ex_create_activity_toolbar"
        layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise name"
        android:textSize="26sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:minEms="6"
        android:textSize="22sp" />

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_bright" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_turns"
                android:textAlignment="center"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/num_turns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minEms="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpt_sec"
                android:textAlignment="center"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/time_per_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minEms="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gbt_sec"
                android:textAlignment="center"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/gap_between_turns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minEms="3" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/exercise_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:imeOptions="actionSend"
        android:text="@string/submit" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoplay" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/autoplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true" />
    </RelativeLayout>
</LinearLayout>
