<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Rishi Raj
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="me.itsrishi.exercisecounter.activities.SessionCreateActivity">

    <include
        android:id="@+id/session_create_activity_toolbar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/session_create_activity_toolbar"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/session_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Session Name"
            android:textSize="22sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/session_name_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:minEms="6"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gap_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:labelFor="@+id/session_gap_set"
                android:text="@string/gbt_sec"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/session_gap_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:minEms="3"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/alarms_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_access_alarms_white_40dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/session_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionSend"
                android:text="@string/submit" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/exercise_edit_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager">
            android:background="#999999"
            android:visibility="visible">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exercise_plus_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        app:borderWidth="0dp"
        app:elevation="4sp"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</RelativeLayout>
