...

    <include
        android:id="@+id/main_activity_toolbar"
        layout="@layout/toolbar"></include>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sessions_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_activity_toolbar"
        android:background="#000000"
        android:visibility="visible"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"></android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/session_plus_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
...
