...

<resources>
    <string name="app_name">Exercise Counter</string>
    <string name="undo_text">UNDO</string>
    <string name="undo_message">One exercise removed</string>
    <string name="abort_message">Abort current exercise session?</string>
    <string name="yes">yes</string>
    <string name="scheduled_for">Next session:</string>
    <string name="time">Time:</string>
    <string name="no">no</string>
    <string name="title_activity_session_edit">Edit session</string>
    <string name="title_activity_session_create">Create new session</string>
    <string name="title_activity_exercise_create">Add new exercise</string>
    <string name="title_activity_exercise_edit">Edit exercise</string>
    <string name="title_activity_settings">Settings</string>

...
